testdata/typechecker/error/classes/portfolio_UndefFieldDecl.java
// Tests that field declarations of an undefined class error.

int main() {
    return 0;
}

class UndefFieldDeclClass {
    UndefClass a;
}
